src/test/deca/context/invalid/provided/opBoolean_sur_int.deca
//Resultats :
//Erreur contextuelle
//Ligne 4: Can be applied only to booleans
{int x = 1 && 2;}
